Fixed misplaced padding that was "lagging" collapse

--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -216,6 +216,7 @@ p {
 .vapor-font {
     font-family: "Lucida Console", Monaco, monospace;
     font-size: 2em;
+    opacity: 0.9;
 }
 
 .canvas {
